// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test <SocialLink /> should match snapshot for external link 1`] = `
<div>
  <a
    aria-label="Example (opens in new tab)"
    class="socialLink"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      aria-hidden="true"
    >
      <span
        data-testid="icon"
      >
        Icon
      </span>
    </span>
     
    Example
  </a>
</div>
`;

exports[`test <SocialLink /> should match snapshot for internal link 1`] = `
<div>
  <a
    aria-label="About"
    class="socialLink"
    href="/about"
  >
    <span
      aria-hidden="true"
    >
      <span
        data-testid="icon"
      >
        Icon
      </span>
    </span>
     
    About
  </a>
</div>
`;
